WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254932
[GLib] Fix various -Werror,-Wundefined-inline build failures after
262488@main
https://bugs.webkit.org/show_bug.cgi?id=254932
Summary
[GLib] Fix various -Werror,-Wundefined-inline build failures after 262488@main
Michael Catanzaro
Reported
2023-04-03 11:54:55 PDT
Fix various -Werror,-Wundefined-inline build failures after
262488@main
, e.g. /home/mcatanzaro/Projects/WebKit/Source/WebKit/Platform/IPC/MessageSender.h:46:38: error: inline function 'IPC::MessageSender::send<Messages::WebPageProxy::DidCreateMainFrame>' is not defined [-Werror,-Wundefined-inline] template<typename T> inline bool send(T&& message); ^ /home/mcatanzaro/Projects/WebKit/Source/WebKit/WebProcess/WebPage/WebFrame.cpp:125:14: note: used here page.send(Messages::WebPageProxy::DidCreateMainFrame(frameID())); ^ In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk4/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp:1: In file included from /home/mcatanzaro/Projects/WebKit/Source/WebKit/WebProcess/WebPage/WebCookieCache.cpp:31: In file included from /home/mcatanzaro/Projects/WebKit/Source/WebKit/WebProcess/WebProcess.h:29: In file included from /home/mcatanzaro/Projects/WebKit/Source/WebKit/Shared/AuxiliaryProcess.h:30:
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-04-03 12:00:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12329
EWS
Comment 2
2023-04-03 13:01:09 PDT
Committed
262526@main
(c806f295aa72): <
https://commits.webkit.org/262526@main
> Reviewed commits have been landed. Closing PR #12329 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug