[GLib] Fix various -Werror,-Wundefined-inline build failures after 262488@main https://bugs.webkit.org/show_bug.cgi?id=254932

Unreviewed build fixes.

* Source/WebKit/UIProcess/API/gtk/DropTargetGtk4.cpp:
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
* Source/WebKit/WebProcess/WebPage/glib/WebPageGLib.cpp:
* Source/WebKit/WebProcess/WebPage/gtk/WebPageGtk.cpp:

Canonical link: https://commits.webkit.org/262526@main